[package]
name = "sc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
hmac = "0.12.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
subtle = "2.6.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
