[package]
name = "sc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["tracing"] }
hmac = "0.12.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
subtle = "2.6.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
